Fix login page rendering slowly on Safari iOS

--- a/server/assets/app/css/pages/auth.css
+++ b/server/assets/app/css/pages/auth.css
@@ -16,9 +16,18 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  box-sizing: border-box;
   background-color: var(--surface-background-primary);
   padding: var(--noora-spacing-10) var(--noora-spacing-4);
+  width: 100%;
   min-height: 100vh;
+  min-height: 100dvh;
+
+  @media (max-width: 768px) {
+    & {
+      padding: 0;
+    }
+  }
 
   & * {
     box-sizing: border-box;
@@ -39,8 +48,7 @@
       & {
         box-shadow: unset;
         border-radius: 0;
-        width: 100vw;
-        height: 100vh;
+        width: 100%;
       }
     }
 
@@ -51,6 +59,13 @@
       gap: var(--noora-spacing-9);
       padding: var(--noora-spacing-10) var(--noora-spacing-11) var(--noora-spacing-3) var(--noora-spacing-11);
       max-width: 438px;
+
+      @media (max-width: 768px) {
+        & {
+          width: 100%;
+          max-width: 100%;
+        }
+      }
 
       & > [data-part="logo"] {
         z-index: 103;
@@ -145,6 +160,10 @@
   }
 
   & [data-part="background"] {
+    @media (max-width: 768px) {
+      display: none;
+    }
+
     position: absolute;
     top: 0px;
     left: 0px;
@@ -196,7 +215,9 @@
       left: 0px;
       translate: -50% 20%;
       z-index: var(--noora-z-index-2);
-      filter: blur(150px);
+      @media (min-width: 768px) {
+        filter: blur(150px);
+      }
       border-radius: 1000px;
       background: light-dark(oklch(54.2% 0.27 286.9 / 0.1), oklch(54.2% 0.27 286.9 / 0.15));
       width: 90%;
@@ -237,6 +258,18 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    gap: var(--noora-spacing-3);
+
+    @media (max-width: 768px) {
+      & {
+        flex-direction: column;
+        align-items: flex-start;
+      }
+
+      & > :last-child {
+        align-self: flex-start;
+      }
+    }
   }
 }
 
